<resources>
    <string name="app_name">Android Environmental Sensors</string>
    <string name="illuminance">Illuminance</string>
    <string name="air_temperature">Air Temperature</string>
    <string name="relative_humidity">Relative Humidity</string>
    <string name="air_pressure">Air Pressure</string>
    <string name="estimate_power">Estimated Power From Sunlight</string>
    <string name="exit">Exit</string>
    <string name="estimated_power_charge_otohtr">Estimated Power Charge (OTOHTR)</string>
    <string name="pause">Pause</string>
    <string name="reset_power_charged">Reset Power Charged</string>
    <string name="save_power_charged">Save Power Charged</string>
    <string name="enter_your_name">Please Enter Your Name:</string>
    <string name="save_confirmation">Save Confirmation</string>
    <string name="confirm">Confirm</string>
    <string name="upload_confirmation">Upload Confirmation</string>
    <string name="enter_your_update_interval_in_seconds">Please Enter Your Update Interval In Seconds:</string>
</resources>
